<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg2">

    <View
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/topBar"
        android:background="@color/colorPrimary"
        >
    </View>

    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/back"
        android:id="@+id/backButton"
        app:layout_constraintLeft_toLeftOf="@id/topBar"
        app:layout_constraintTop_toTopOf="@id/topBar"
        android:background="@color/transparent"
        android:scaleType="fitCenter"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        app:layout_constraintLeft_toLeftOf="@id/topBar"
        app:layout_constraintRight_toRightOf="@id/topBar"
        app:layout_constraintTop_toTopOf="@id/topBar"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="8dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:text="@string/edit"
        android:id="@+id/editButton"
        app:layout_constraintRight_toRightOf="@id/topBar"
        app:layout_constraintTop_toTopOf="@id/topBar"
        android:background="@color/transparent"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="9dp"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        android:id="@+id/avatar"
        android:layout_margin="20dp"
        android:src="@drawable/guanyu"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoName"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/realName"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realName"
        android:text="关羽"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/infoName"
        app:layout_constraintTop_toTopOf="@id/infoName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="110dp"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoGender"
        android:text="@string/gender"
        app:layout_constraintRight_toRightOf="@id/infoName"
        app:layout_constraintTop_toBottomOf="@id/infoName"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realGender"
        android:text="男"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/infoGender"
        app:layout_constraintLeft_toLeftOf="@id/realName"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoLife"
        android:text="@string/lifetime"
        app:layout_constraintRight_toRightOf="@id/infoName"
        app:layout_constraintTop_toBottomOf="@id/infoGender"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realLife"
        android:text="111 - 219"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/infoLife"
        app:layout_constraintLeft_toLeftOf="@id/realGender"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoPlace"
        android:text="@string/place"
        app:layout_constraintRight_toRightOf="@id/infoName"
        app:layout_constraintTop_toBottomOf="@id/infoLife"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realPlace"
        android:text="司隶河东郡解"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/infoPlace"
        app:layout_constraintLeft_toLeftOf="@id/realLife"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoLeague"
        android:text="@string/league"
        app:layout_constraintRight_toRightOf="@id/infoName"
        app:layout_constraintTop_toBottomOf="@id/infoPlace"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/realLeague"
        android:text="蜀"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/infoLeague"
        app:layout_constraintLeft_toLeftOf="@id/realPlace"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        app:layout_constraintTop_toBottomOf="@id/infoLeague"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="#696969"
        android:layout_margin="15dp"
        android:id="@+id/hrline"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/introduction"
        android:text="人物简介"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hrline"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/introd_detail"
        android:text="曹操是西园八校尉之一，曾只身行刺董卓，失败后和袁绍共同联合天下诸侯讨伐董卓，后独自发展自身势力，一生中先后战胜了袁术、吕布、张绣、袁绍、刘表、张鲁、马超等割据势力，统一了北方。"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/introduction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/black"
        android:layout_margin="15dp" />

</android.support.constraint.ConstraintLayout>